# Master-Control-Orchestration-Server

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  VERSION.json  vcpkg.json
Forsetti-Framework-Windows-main/Forsetti-Framework-Windows-main/: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  agentic-coding-policy.json  forsetti-instructions.json  vcpkg.json
Forsetti-Framework-Windows-main/Forsetti-Framework-Windows-main/.github/: labeler.yml  pull_request_template.md  release-drafter-config.yml
Forsetti-Framework-Windows-main/Forsetti-Framework-Windows-main/.github/workflows/: auto-label.yml  branch-cleanup.yml  changelog.yml  ci.yml  codeql.yml  commit-lint.yml  dependency-audit.yml  guardrails.yml  license-headers.yml  manifest-validation.yml  pr-compatibility.yml  pr-size.yml  release-drafter.yml  stale.yml  version-bump.yml  welcome.yml
Forsetti-Framework-Windows-main/Forsetti-Framework-Windows-main/Scripts/: check-architecture.ps1  check-dependencies.ps1  check-manifests.ps1  check-pr-compatibility.ps1  verify-forsetti-guardrails.ps1
Forsetti-Framework-Windows-main/Forsetti-Framework-Windows-main/include/ForsettiCore/: ActivationStore.h  CapabilityPolicy.h  CompatibilityChecker.h  EntitlementProviders.h  ForsettiContext.h  ForsettiEventBus.h  ForsettiLogger.h  ForsettiProtocols.h  ForsettiRuntime.h  ForsettiServiceContainer.h  ForsettiServices.h  ForsettiVersion.h  ManifestLoader.h  ModuleManager.h  ModuleModels.h  ModuleRegistry.h  SemVer.h  StaticModuleRegistry.h  UIModels.h  UISurfaceManager.h
Forsetti-Framework-Windows-main/Forsetti-Framework-Windows-main/include/ForsettiPlatform/: DefaultPlatformServices.h  EntitlementProviders.h  PlatformServices.h
Forsetti-Framework-Windows-main/Forsetti-Framework-Windows-main/src/ForsettiCore/: ActivationStore.cpp  CMakeLists.txt  CapabilityPolicy.cpp  CompatibilityChecker.cpp  EntitlementProviders.cpp  ForsettiContext.cpp  ForsettiEventBus.cpp  ForsettiLogger.cpp  ForsettiRuntime.cpp  ForsettiServiceContainer.cpp  ManifestLoader.cpp  ModuleManager.cpp  ModuleModels.cpp  ModuleRegistry.cpp  SemVer.cpp  StaticModuleRegistry.cpp  UIModels.cpp  UISurfaceManager.cpp
Forsetti-Framework-Windows-main/Forsetti-Framework-Windows-main/src/ForsettiModulesExample/: CMakeLists.txt  ExampleModuleRegistry.cpp  ExampleModules.cpp  ExampleModules.h
Forsetti-Framework-Windows-main/Forsetti-Framework-Windows-main/src/ForsettiModulesExample/Resources/ForsettiManifests/: ExampleServiceModule.json  ExampleUIModule.json
Forsetti-Framework-Windows-main/Forsetti-Framework-Windows-main/src/ForsettiPlatform/: CMakeLists.txt  DefaultPlatformServices.cpp  EntitlementProviders.cpp  PlatformServices.cpp
Forsetti-Framework-Windows-main/Forsetti-Framework-Windows-main/tests/: CMakeLists.txt
Forsetti-Framework-Windows-main/Forsetti-Framework-Windows-main/tests/ForsettiArchitectureTests/: ArchitectureEnforcementTests.cpp
Forsetti-Framework-Windows-main/Forsetti-Framework-Windows-main/tests/ForsettiCoreTests/: BootstrapTests.cpp  CompatibilityCheckerTests.cpp  EntitlementProviderTests.cpp  ManifestLoaderTests.cpp  ModuleCommunicationTests.cpp  ModuleLoggingTests.cpp  RuntimeLifecycleTests.cpp  SemVerTests.cpp  TestHelpers.h  UISurfaceManagerTests.cpp
Forsetti-Framework-Windows-main/Forsetti-Framework-Windows-main/tests/ForsettiPlatformTests/: PlatformServicesTests.cpp
src/MasterControlApp/: CMakeLists.txt  ClientIntegrationCatalog.cpp  DiagnosticsService.cpp  DiagnosticsStore.cpp  MasterControlDefaults.cpp  MasterControlModels.cpp  MasterControlModules.cpp  MasterControlRuntime.cpp  McpGatewayAdapters.cpp  SupervisorAssignmentService.cpp  SupervisorAssignmentService.h
src/MasterControlBaselineToolsWorker/: CMakeLists.txt  main.cpp
src/MasterControlBootstrapper/: CMakeLists.txt  InstallerLogSupport.h  MasterControlBootstrapper.rc  launcher_main.cpp  main.cpp  setup_main.cpp
src/MasterControlModules/: CMakeLists.txt  MasterControlModules.cpp
src/MasterControlModules/Resources/ForsettiManifests/: BeaconGatewayModule.json  ClaudeCodeProviderModule.json  CodexProviderModule.json  CommandLogicUnitModule.json  ConfigurationModule.json  DashboardUIModule.json  EnvironmentDiscoveryModule.json  ExportModule.json  HostTelemetryModule.json  IOSGatewayModule.json  IOSGovernanceMcpServerModule.json  InstallerImportModule.json  LanClientAccessModule.json  MacGatewayModule.json  MacGovernanceMcpServerModule.json  ProviderIntegrationModule.json  RuntimeInventoryModule.json  WindowsGatewayModule.json  WindowsGovernanceMcpServerModule.json  XAIProviderModule.json
src/MasterControlServiceHost/: CMakeLists.txt  MasterControlServiceHost.rc  main.cpp
src/MasterControlShell/: App.xaml  App.xaml.cpp  App.xaml.h  CMakeLists.txt  CommandLogicUnitSectionControl.xaml  CommandLogicUnitSectionControl.xaml.cpp  CommandLogicUnitSectionControl.xaml.h  DiagnosticsSectionControl.xaml  DiagnosticsSectionControl.xaml.cpp  DiagnosticsSectionControl.xaml.h  EndpointStatCardGrid.h  ExportsSectionControl.xaml  ExportsSectionControl.xaml.cpp  ExportsSectionControl.xaml.h  ImportsSectionControl.xaml  ImportsSectionControl.xaml.cpp  ImportsSectionControl.xaml.h  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  MasterControlShell.rc  MasterControlShell.vcxproj  OverviewSectionControl.xaml  OverviewSectionControl.xaml.cpp  OverviewSectionControl.xaml.h  Project.idl  ProviderAssignmentOptions.h  ProvidersSectionControl.xaml  ProvidersSectionControl.xaml.cpp  ProvidersSectionControl.xaml.h  RuntimeSectionControl.xaml  RuntimeSectionControl.xaml.cpp  RuntimeSectionControl.xaml.h  SecuritySectionControl.xaml  SecuritySectionControl.xaml.cpp  SecuritySectionControl.xaml.h  SettingsSectionControl.xaml  SettingsSectionControl.xaml.cpp  SettingsSectionControl.xaml.h  SetupWizardBuilder.cpp  (+12 more)
tests/: CMakeLists.txt  MasterControlOrchestrationServerTests.cpp  MasterControlProgramTests.cpp
tools/VsTestConsoleProxy/: CMakeLists.txt  VsTestConsoleProxyConfig.h.in  main.cpp
(+668 files in other folders)
