# Master Control Orchestration Server
# Copyright (c) 2026 James Daley. All Rights Reserved.
# Proprietary and Confidential.

set(MASTERCONTROL_SHELL_PROJECT "${CMAKE_CURRENT_SOURCE_DIR}/MasterControlShell.vcxproj")

set(MASTERCONTROL_MSBUILD_HINTS)
if(CMAKE_GENERATOR_INSTANCE)
    # Keep the inner WinUI project build aligned with the active IDE generator.
    list(APPEND MASTERCONTROL_MSBUILD_HINTS
        "${CMAKE_GENERATOR_INSTANCE}/MSBuild/Current/Bin"
    )
endif()

list(APPEND MASTERCONTROL_MSBUILD_HINTS
    "C:/Program Files/Microsoft Visual Studio/18/Community/MSBuild/Current/Bin"
    "C:/Program Files/Microsoft Visual Studio/18/BuildTools/MSBuild/Current/Bin"
    "C:/Program Files/Microsoft Visual Studio/2022/Community/MSBuild/Current/Bin"
    "C:/Program Files/Microsoft Visual Studio/2022/BuildTools/MSBuild/Current/Bin"
)

# Re-resolve this on each configure so a prior VS installation choice does not linger in the cache.
unset(MASTERCONTROL_MSBUILD CACHE)
find_program(
    MASTERCONTROL_MSBUILD
    NAMES MSBuild.exe
    HINTS ${MASTERCONTROL_MSBUILD_HINTS}
    NO_CACHE
)

if(NOT MASTERCONTROL_MSBUILD)
    message(FATAL_ERROR "MSBuild.exe is required to build the WinUI 3 MasterControlShell project.")
endif()

file(TO_NATIVE_PATH "${CMAKE_CURRENT_BINARY_DIR}" MASTERCONTROL_SHELL_BINARY_DIR_NATIVE)

set(MASTERCONTROL_SHELL_OUTPUT_DIR "${MASTERCONTROL_SHELL_BINARY_DIR_NATIVE}\\$<CONFIG>\\")
set(MASTERCONTROL_SHELL_INTERMEDIATE_DIR "${MASTERCONTROL_SHELL_BINARY_DIR_NATIVE}\\intermediate\\$<CONFIG>\\")

# Resolve the latest Windows 10 SDK bin directory so we can point CppWinRT at
# mdmerge.exe explicitly. Without this, the nested MSBuild custom-build step
# fails on machines where the SDK bin is not on the inherited PATH.
#
# CppWinRT.targets builds the command as `$(MdMergePath)mdmerge ...` with no
# quoting around the path, so any space in MdMergePath breaks the command
# parser. We resolve the 8.3 short-name form of the SDK bin to avoid spaces
# entirely, then emit a small Directory.Build.props next to the vcxproj so
# the property flows in without quoting headaches on the MSBuild command
# line.
set(MASTERCONTROL_MDMERGE_PATH "")
file(GLOB MASTERCONTROL_SDK_VERSION_DIRS "C:/Program Files (x86)/Windows Kits/10/bin/*")
foreach(_candidate IN LISTS MASTERCONTROL_SDK_VERSION_DIRS)
    if(EXISTS "${_candidate}/x64/mdmerge.exe")
        get_filename_component(_candidate_name "${_candidate}" NAME)
        if(_candidate_name MATCHES "^[0-9]+\\.[0-9]+\\.[0-9]+\\.[0-9]+$")
            file(TO_NATIVE_PATH "${_candidate}/x64" _mc_long_path)
            # Ask the shell for the 8.3 short-path form so we avoid embedded
            # spaces in the resulting MdMergePath.
            execute_process(
                COMMAND powershell -NoProfile -Command
                    "(New-Object -ComObject Scripting.FileSystemObject).GetFolder([System.IO.Path]::GetFullPath('${_mc_long_path}')).ShortPath"
                OUTPUT_VARIABLE _mc_short_path
                OUTPUT_STRIP_TRAILING_WHITESPACE
                ERROR_QUIET
                RESULT_VARIABLE _mc_short_path_result
            )
            if(_mc_short_path_result EQUAL 0 AND _mc_short_path)
                set(MASTERCONTROL_MDMERGE_PATH "${_mc_short_path}\\")
            else()
                # Fall back to the long path; may fail on paths with spaces.
                set(MASTERCONTROL_MDMERGE_PATH "${_mc_long_path}\\")
            endif()
        endif()
    endif()
endforeach()

if(MASTERCONTROL_MDMERGE_PATH)
    file(WRITE "${CMAKE_CURRENT_SOURCE_DIR}/Directory.Build.props"
"<?xml version=\"1.0\" encoding=\"utf-8\"?>
<!-- Generated by CMake. Do not edit directly; rerun cmake to regenerate.
     Gives CppWinRT.targets a direct path to mdmerge.exe so builds do not
     rely on the Windows 10 SDK bin being on PATH. -->
<Project>
  <PropertyGroup>
    <MdMergePath>${MASTERCONTROL_MDMERGE_PATH}</MdMergePath>
  </PropertyGroup>
</Project>
")
    message(STATUS "MasterControlShell: wrote Directory.Build.props with MdMergePath=${MASTERCONTROL_MDMERGE_PATH}")
endif()

# Also emit a Directory.Build.targets that replaces the nuget-supplied
# PostBuildEvent xcopy with a fully-qualified System32\xcopy.exe. The nested
# MSBuild process the CppCommon.targets custom-build target spawns does not
# always inherit System32 on PATH, and bare `xcopy.exe` then fails with
# exit code 9009. Hard-coding the absolute path side-steps that problem.
# Since Directory.Build.targets is imported AFTER the project, its
# ItemDefinitionGroup entries override the earlier ones from the nuget
# package.
file(WRITE "${CMAKE_CURRENT_SOURCE_DIR}/Directory.Build.targets"
"<?xml version=\"1.0\" encoding=\"utf-8\"?>
<!-- Generated by CMake. Do not edit directly; rerun cmake to regenerate. -->
<Project>
  <ItemDefinitionGroup>
    <PostBuildEvent>
      <Command>&quot;\$(WinDir)\\System32\\xcopy.exe&quot; /y &quot;\$(MSBuildThisFileDirectory)\$(NugetPackageDirectory)\\Microsoft.WindowsAppSDK.1.5.240227000\\runtimes\\win10-x64\\native\\Microsoft.WindowsAppRuntime.Bootstrap.dll&quot; &quot;\$(OutDir)&quot;</Command>
    </PostBuildEvent>
  </ItemDefinitionGroup>
</Project>
")
message(STATUS "MasterControlShell: wrote Directory.Build.targets overriding PostBuildEvent to use absolute xcopy path")

# v0.11.0-alpha.2 follow-up: emit a Shell-local version header so the
# WinUI Shell can stamp MASTERCONTROL_VERSION onto the Window title bar
# and the Overview eyebrow. The runtime-side TUs (MasterControlApp) get
# the version literal from ${CMAKE_BINARY_DIR}/include/MasterControl/
# MasterControlVersion.h via target_include_directories on the runtime
# target, but the Shell is built externally by MSBuild from its
# .vcxproj and that include path is not wired in. Generating the header
# directly into src/MasterControlShell/ lets the Shell consume the
# same MASTERCONTROL_VERSION literal via a simple local #include
# without changing the .vcxproj's AdditionalIncludeDirectories.
file(WRITE "${CMAKE_CURRENT_SOURCE_DIR}/GeneratedVersion.h"
"// Master Control Orchestration Server
// Copyright (c) 2026 James Daley. All Rights Reserved.
//
// GENERATED by CMake from VERSION.json at configure time.
// Do not edit directly; rerun cmake to regenerate.
//
// MASTERCONTROL_VERSION is the canonical build version literal
// surfaced via /api/version on the admin HTTP listener AND stamped
// onto the WinUI Shell's Window title bar + Overview hero eyebrow.

#pragma once

#define MASTERCONTROL_VERSION \"${MASTERCONTROL_FULL_VERSION}\"
#define MASTERCONTROL_VERSION_RC ${PROJECT_VERSION_MAJOR},${PROJECT_VERSION_MINOR},${PROJECT_VERSION_PATCH},0
#define MASTERCONTROL_VERSION_RC_STRING \"${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}.0\"
")
message(STATUS "MasterControlShell: wrote GeneratedVersion.h with MASTERCONTROL_VERSION=${MASTERCONTROL_FULL_VERSION}")

# WinUI Shell platform toolset. The project's CI runners (windows-2025-vs2026)
# ship the v145 toolset (Visual Studio 2026), which is the canonical build
# toolset, so v145 stays the default and CI behaviour is unchanged.
# MasterControlShell.vcxproj is also v143-compatible, so a host with only
# Visual Studio 2022 can build the Shell locally by overriding this:
#   cmake --preset debug -DMASTERCONTROL_SHELL_PLATFORM_TOOLSET=v143
set(MASTERCONTROL_SHELL_PLATFORM_TOOLSET "v145" CACHE STRING
    "MSBuild PlatformToolset for the WinUI Shell (default v145 / VS2026; set v143 for VS2022).")

add_custom_target(MasterControlShell ALL
    COMMAND "${MASTERCONTROL_MSBUILD}" "${MASTERCONTROL_SHELL_PROJECT}"
        /restore
        /t:Build
        /p:RestorePackagesConfig=true
        /p:PlatformToolset=${MASTERCONTROL_SHELL_PLATFORM_TOOLSET}
        /p:Configuration=$<CONFIG>
        /p:Platform=x64
        /p:OutDir=${MASTERCONTROL_SHELL_OUTPUT_DIR}
        /p:IntDir=${MASTERCONTROL_SHELL_INTERMEDIATE_DIR}
        /m
    WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
    VERBATIM
)

install(
    DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/$<CONFIG>/"
    DESTINATION .
    PATTERN "*.exp" EXCLUDE
    PATTERN "*.lib" EXCLUDE
    PATTERN "*.ilk" EXCLUDE
)
